--- a/Steam2/Views/Profiles/Edit.cshtml
+++ b/Steam2/Views/Profiles/Edit.cshtml
@@ -44,6 +44,11 @@
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="State" class="control-label"></label>
+                <input asp-for="State" class="form-control" />
+                <span asp-validation-for="State" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ConnecedUsers" class="control-label"></label>
                 <input asp-for="ConnecedUsers" class="form-control" />
                 <span asp-validation-for="ConnecedUsers" class="text-danger"></span>
