--- a/Steam2/Views/Profiles/Details.cshtml
+++ b/Steam2/Views/Profiles/Details.cshtml
@@ -47,6 +47,12 @@
             @Html.DisplayFor(model => model.Role)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.State)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.State)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ConnecedUsers)
         </dt>
         <dd class = "col-sm-10">
