--- a/Steam2/Views/Profile/Delete.cshtml
+++ b/Steam2/Views/Profile/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Steam2.Models.Profile
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Profile</h4>
     <hr />
@@ -53,14 +54,16 @@
             @Html.DisplayFor(model => model.State)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConnecedUsers)
+            @Html.DisplayNameFor(model => model.ConnectedUsers)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConnecedUsers)
+            @Html.DisplayFor(model => model.ConnectedUsers)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
