--- a/Steam2/Views/Profile/Edit.cshtml
+++ b/Steam2/Views/Profile/Edit.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Steam2.Models.Profile
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Profile</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -48,12 +49,12 @@
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConnecedUsers" class="control-label"></label>
-                <input asp-for="ConnecedUsers" class="form-control" />
-                <span asp-validation-for="ConnecedUsers" class="text-danger"></span>
+                <label asp-for="ConnectedUsers" class="control-label"></label>
+                <input asp-for="ConnectedUsers" class="form-control" />
+                <span asp-validation-for="ConnectedUsers" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
