--- a/Steam2/Views/Profile/Index.cshtml
+++ b/Steam2/Views/Profile/Index.cshtml
@@ -53,10 +53,10 @@
                 @Html.DisplayFor(model => model.State)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.ConnecedUsers)
+                @Html.DisplayNameFor(model => model.ConnectedUsers)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ConnecedUsers)
+                @Html.DisplayFor(model => model.ConnectedUsers)
             </dd>
         </dl>
     </div>
@@ -65,7 +65,8 @@
         <a asp-action="Delete" asp-route-id="@Model?.Id">Delete</a>
     </div>
 }
-else{
+else
+{
     <p>
         <a asp-action="Create">Create New</a>
     </p>
