--- a/Steam2/Views/Wishlist/Create.cshtml
+++ b/Steam2/Views/Wishlist/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Steam2.Models.Cart
+﻿@model Steam2.Models.Wishlist
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Cart</h4>
+<h4>Wishlist</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,9 +23,9 @@
                 <span asp-validation-for="GamesID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FullPrice" class="control-label"></label>
-                <input asp-for="FullPrice" class="form-control" />
-                <span asp-validation-for="FullPrice" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
