--- a/Steam2/Views/Wishlist/Delete.cshtml
+++ b/Steam2/Views/Wishlist/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Steam2.Models.Cart
+﻿@model Steam2.Models.Wishlist
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cart</h4>
+    <h4>Wishlist</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.GamesID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullPrice)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullPrice)
+            @Html.DisplayFor(model => model.Date)
         </dd>
     </dl>
     
