--- a/Steam2/Views/Games/Details.cshtml
+++ b/Steam2/Views/Games/Details.cshtml
@@ -23,18 +23,6 @@
             @Html.DisplayFor(model => model.PublishingDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoursPlayed)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoursPlayed)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RecentHoursPlayer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RecentHoursPlayer)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
@@ -63,6 +51,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Publisher)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SaleId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SaleId)
         </dd>
     </dl>
 </div>
