--- a/Steam2/Views/Games/Edit.cshtml
+++ b/Steam2/Views/Games/Edit.cshtml
@@ -24,16 +24,6 @@
                 <span asp-validation-for="PublishingDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HoursPlayed" class="control-label"></label>
-                <input asp-for="HoursPlayed" class="form-control" />
-                <span asp-validation-for="HoursPlayed" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RecentHoursPlayer" class="control-label"></label>
-                <input asp-for="RecentHoursPlayer" class="form-control" />
-                <span asp-validation-for="RecentHoursPlayer" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
@@ -57,6 +47,11 @@
                 <label asp-for="Publisher" class="control-label"></label>
                 <input asp-for="Publisher" class="form-control" />
                 <span asp-validation-for="Publisher" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SaleId" class="control-label"></label>
+                <input asp-for="SaleId" class="form-control" />
+                <span asp-validation-for="SaleId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
