--- a/Steam2/Views/Games/Index.cshtml
+++ b/Steam2/Views/Games/Index.cshtml
@@ -19,12 +19,6 @@
                 @Html.DisplayNameFor(model => model.PublishingDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HoursPlayed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RecentHoursPlayer)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
@@ -39,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Publisher)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SaleId)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -50,12 +47,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PublishingDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoursPlayed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RecentHoursPlayer)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
@@ -71,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Publisher)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SaleId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
