--- a/Steam2/Views/Games/Index.cshtml
+++ b/Steam2/Views/Games/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Games</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.Publisher)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SaleId)
+                Sale
             </th>
             <th></th>
         </tr>
@@ -70,7 +70,8 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="AddWishlist" asp-route-id="@item.Id">Add to Wishlist</a>
+                <a asp-action="AddWishlist" asp-route-id="@item.Id">Add to Wishlist</a> |
+                <a asp-action="AddCart" asp-route-id="@item.Id">Add to cart</a>
             </td>
         </tr>
 }
