--- a/Steam2/Views/Wishlists/Index.cshtml
+++ b/Steam2/Views/Wishlists/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Wishlist</h1>
 
 <table class="table">
     <thead>
@@ -19,18 +19,19 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
+        @foreach (var item in Model) {
+            <tr>
+                <td>
                     @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Delete" asp-route-id="@item.Id">Remove from wishlist</a>
-            </td>
-        </tr>
-}
+                </td>
+                <td>
+                    <a asp-action="AddCart" asp-route-id="@item.Id">Add to cart</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Remove from wishlist</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
