--- a/Steam2/Views/Orders/Delete.cshtml
+++ b/Steam2/Views/Orders/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GamesID)
+            @Html.DisplayNameFor(model => model.GameIDs)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GamesID)
+            @Html.DisplayFor(model => model.GameIDs)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProfileID)
