--- a/Steam2/Views/Orders/Index.cshtml
+++ b/Steam2/Views/Orders/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.GamesID)
+                @Html.DisplayNameFor(model => model.GameIDs)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProfileID)
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.GamesID)
+                @Html.DisplayFor(modelItem => item.GameIDs)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProfileID)
