--- a/Steam2/Views/Games/Index.cshtml
+++ b/Steam2/Views/Games/Index.cshtml
@@ -71,6 +71,7 @@
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                 <a asp-action="AddWishlist" asp-route-id="@item.Id">Add to Wishlist</a>
+                <a asp-action="AddToLibrary" asp-route-id="@item.Id">BUY</a>
             </td>
         </tr>
 }
