--- a/Steam2/Views/Shared/_Layout.cshtml
+++ b/Steam2/Views/Shared/_Layout.cshtml
@@ -45,7 +45,10 @@
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Order</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Order</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Genres" asp-action="Index">Genres</a>
                             </li>
                         }
                     </ul>
