--- a/Steam2/Views/Comments/Create.cshtml
+++ b/Steam2/Views/Comments/Create.cshtml
@@ -7,53 +7,22 @@
 <h1>Create</h1>
 
 <h4>Comment</h4>
+<div>
+    <p>@Model.GamesID</p>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create2">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="GamesID"/>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GamesID" class="control-label"></label>
-                <input asp-for="GamesID" class="form-control" />
-                <span asp-validation-for="GamesID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProfileID" class="control-label"></label>
-                <input asp-for="ProfileID" class="form-control" />
-                <span asp-validation-for="ProfileID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PositiveCount" class="control-label"></label>
-                <input asp-for="PositiveCount" class="form-control" />
-                <span asp-validation-for="PositiveCount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NegativeCount" class="control-label"></label>
-                <input asp-for="NegativeCount" class="form-control" />
-                <span asp-validation-for="NegativeCount" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Edited" /> @Html.DisplayNameFor(model => model.Edited)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
