--- a/Steam2/Views/Games/Details.cshtml
+++ b/Steam2/Views/Games/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Steam2.Models.Game
+﻿@model Steam2.Models.GamesComments.GamesComments
 
 @{
     ViewData["Title"] = "Details";
@@ -11,56 +11,73 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.game.Title)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.game.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PublishingDate)
+            @Html.DisplayNameFor(model => model.game.PublishingDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PublishingDate)
+            @Html.DisplayFor(model => model.game.PublishingDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.game.Price)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.game.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rating)
+            @Html.DisplayNameFor(model => model.game.Rating)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rating)
+            @Html.DisplayFor(model => model.game.Rating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.game.Description)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.game.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Developer)
+            @Html.DisplayNameFor(model => model.game.Developer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Developer)
+            @Html.DisplayFor(model => model.game.Developer)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Publisher)
+            @Html.DisplayNameFor(model => model.game.Publisher)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Publisher)
+            @Html.DisplayFor(model => model.game.Publisher)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SaleId)
+            @Html.DisplayNameFor(model => model.game.SaleId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SaleId)
+            @Html.DisplayFor(model => model.game.SaleId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <table class="table">
+        <h4>Comments</h4>
+        <tbody>
+            @foreach (var item in Model.comments){
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProfileID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>            
+            </tr>
+            }
+        </tbody>
+    </table>
+</div>
+<div>
+    <a asp-action="CreateComment" asp-route-id="@Model.game.Id">Create comment</a>
     <a asp-action="Index">Back to List</a>
 </div>
