--- a/Steam2/Views/Games/Create.cshtml
+++ b/Steam2/Views/Games/Create.cshtml
@@ -42,6 +42,13 @@
                 <input asp-for="Publisher" class="form-control" />
                 <span asp-validation-for="Publisher" class="text-danger"></span>
             </div>
+            <!--
+            <div class="form-group">
+                Add genres separated by a comma (,)
+                <label for="Genre" class="control-label"></label>
+                <input for="Genre" class="form-control" />
+            </div>
+            -->
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
