--- a/Steam2/Views/Sales/Index.cshtml
+++ b/Steam2/Views/Sales/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Steam2.Models.Sales>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sales";
 }
 
 <h1>Index</h1>
