more minor changes, genres now work

--- a/Steam2/Views/Games/Index.cshtml
+++ b/Steam2/Views/Games/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Games</h1>
 @if (ViewData["Creator"] != null)
 {
     <p>
@@ -42,12 +42,6 @@
                 </th>
                 <th>
                     Sale actions
-                </th>
-                <th>
-                    Applied Genres
-                </th>
-                <th>
-                    Genre actions
                 </th>
             }
             <th></th>
@@ -91,11 +85,14 @@
                 </td>
             }
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                @if (ViewData["Creator"] != null && item.CreatorId == Model.ProfileId)
+                {
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                }
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                 <a asp-action="AddWishlist" asp-route-id="@item.Id">Add to Wishlist</a> |
-                    <a asp-action="AddToLibrary" asp-route-id="@item.Id">BUY</a> |
+                <a asp-action="AddToLibrary" asp-route-id="@item.Id">BUY</a> |
                 
             </td>
         </tr>
