--- a/Steam2/Views/Sales/Index.cshtml
+++ b/Steam2/Views/Sales/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Steam2.Models.Sales>
 
 @{
-    ViewData["Title"] = "Sales";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Sales</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
