--- a/Steam2/Views/Cart/Transaction.cshtml
+++ b/Steam2/Views/Cart/Transaction.cshtml
@@ -9,4 +9,4 @@ Do you want to buy these games:
 list games
 
 Total price with sales: @ViewBag.Message
-<a asp-action="ConfirmTransaction">Confirm buyment</a>
+<a asp-action="BuyGamesFromApi">Confirm buyment</a>
