--- a/Steam2/Views/Achievements/Create2.cshtml
+++ b/Steam2/Views/Achievements/Create2.cshtml
@@ -10,9 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create2">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="GamesID"/>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -40,7 +39,12 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="PlayerPerc" class="control-label"></label>
+                <input asp-for="PlayerPerc" class="form-control" />
+                <span asp-validation-for="PlayerPerc" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create2" class="btn btn-primary" />
             </div>
         </form>
     </div>
